# student-screen-recorder

./: .gitignore  Makefile  NOTES.md  README.md  dune-project  ssr.opam  test.html
.github/workflows/: build.yml
docker/: .gitignore  Dockerfile  Makefile
server/: Makefile  dune  server.ml
src/: HTML.ml  config.ml  dune  event.ml  extlib.ml  last.ml  server.ml  ssr.ml  student.ml  test-video.html  test.html  test2.html  user.ml
static/: ssr.js  test.html
test/: dune  events.yml  ssr.yml
